[gd_scene load_steps=3 format=2]

[ext_resource path="res://stages/stage_cutscene_area.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 250, 200 )

[node name="StageCutsceneArea" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
drag_margin_h_enabled = false
drag_margin_v_enabled = false
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
